# bkw_vzev_calculator

./: .gitignore  README.md  app.py  config.example.toml  main.py  pyproject.toml
src/: allocation.py  billing.py  config.py  csv_import.py  database.py  export_csv.py  export_pdf.py  models.py  quality.py  translations.py
