[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bkw-vzev-calculator"
version = "0.1.0"
description = "Swiss vZEV solar billing calculator — CSV import, solar allocation, and bill generation"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0",
    "fpdf2>=2.8",
    "loguru>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
